--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.4.7",
+    "@types/uuid": "^8.3.3",
     "express": "^4.17.1",
-    "typescript": "^4.5.2",
-    "@types/uuid": "^8.3.3"
+    "multer": "^1.4.4",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
