--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.3",
+    "csv-parse": "^5.0.3",
     "express": "^4.17.1",
     "multer": "^1.4.4",
     "typescript": "^4.5.2"
