--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,34 @@
-version: '3.7'
+version: "3.9"
 
 services:
-  database-ignite:
+  database:
     image: postgres
     container_name: database_ignite
     restart: always
-    ports:
+    ports: 
       - 5432:5432
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=ignite
       - POSTGRES_DB=rentx
     volumes:
-     - pgdata:/data/postgres
-    network_mode: host
+      - pgdata:/data/postgres
+
+
   app:
     build: .
-    container_name: rentx 
-    ports:
+    container_name: rentx
+    restart: always
+    ports: 
       - 3333:3333
-    volumes:
+      - 9229:9229
+    volumes: 
       - .:/usr/app
-    network_mode: host
+    links: 
+      - database
+    depends_on:
+      - database
+
 
 
 volumes:
