--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.2.0",
+    "tsyringe": "^4.7.0",
     "typeorm": "^0.2.41",
     "typescript": "^4.5.2",
     "uuid": "^8.3.2"
