--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,7 +74,9 @@
           "error",
           {
               "devDependencies": [
-                  "**/*.spec.js"
+                  "**/*.spec.js",
+                  "**/*.test.ts", 
+                  "**/*.test.tsx"
               ]
           }
       ]
