--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/uuid": "^8.3.3",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.3",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -45,6 +46,6 @@
     "jest": "^29.1.2",
     "prettier": "^2.5.1",
     "ts-jest": "^29.0.3",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.6"
   }
 }
