--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.9.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
@@ -35,6 +37,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.1.2",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
