--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/csv-parse": "^1.2.2",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
